--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,42 @@ repositories {
     mavenCentral()
 }
 
+dependencyManagement {
+    imports {
+        mavenBom 'org.apache.camel.springboot:camel-spring-boot-dependencies:3.12.0'
+    }
+}
+
 dependencies {
-    implementation 'org.apache.camel.springboot:camel-spring-boot-starter:3.12.0'
-    implementation 'org.apache.camel.springboot:camel-jacksonxml-starter:3.12.0'
+//    implementation 'org.apache.camel.springboot:camel-spring-boot-starter:3.12.0'
+//    implementation 'org.apache.camel.springboot:camel-sql-starter:3.12.0'
+//    implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.5.6'
+    implementation 'org.apache.camel.springboot:camel-jacksonxml-starter'
+    implementation 'org.apache.camel.springboot:camel-spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.apache.camel:camel-endpointdsl'
+    implementation 'org.apache.camel:camel-yaml-dsl'
+    implementation 'org.apache.camel.springboot:camel-kafka-starter'
+    implementation 'org.apache.camel.springboot:camel-jackson-starter'
+    implementation 'org.apache.camel.springboot:camel-file-watch-starter'
+    implementation 'org.apache.camel.springboot:camel-csv-starter'
+    implementation 'org.apache.camel.springboot:camel-sql-starter'
+    implementation 'org.apache.camel.springboot:camel-jsonpath-starter'
+    implementation 'org.apache.camel.springboot:camel-jetty-starter'
+    implementation 'org.apache.camel.springboot:camel-http-starter'
+    implementation 'org.apache.commons:commons-lang3'
+    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'commons-io:commons-io:2.8.0'
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+
+
+
 }
 
 test {
